--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-  "name": "test-for-devbase",
+  "name": "insursync-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8081",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.17",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/joy": "^5.0.0-beta.31",
+    "@mui/material": "^5.15.10",
+    "@types/material-ui": "^0.21.16",
+    "@types/sortablejs": "^1.15.8",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
-    "next": "14.0.4",
+    "next": "^14.1.3",
     "postcss": "^8.4.33",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss": "^3.4.1"
+    "sortablejs": "^1.15.2",
+    "swr": "^2.2.5",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -32,6 +46,8 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.2.2",
     "typescript": "^5"
   }
